<resources>
    <string name="app_name">ParkMe</string>

    <!--All ImageView Content Description-->
    <string name="app_logo">App Logo</string>
    <string name="terminal_icon">Terminal Icon</string>

    <!--Index Page-->
    <string name="index_instruction">Please fill in your details below to use the app.</string>
    <string name="add_car_instruction">Add your car details.</string>
    <string name="driver_name">Name</string>
    <string name="driver_phone">Mobile Number</string>
    <string name="number_plate">Number Plate</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>

    <!--Home Screen-->
    <string name="find_slot">Find a Slot</string>
    <string name="track_car">Track My Car</string>
    <string name="options">Options</string>

    <!--Find a Slot-->
    <string name="select_gate">Select your entry point</string>
    <string name="select_instruction">Select your preferred destination</string>
    <string name="empty_terminal_message">There are no terminals available</string>

    <!--Messages-->
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="zero_phone_error">Phone number should not begin with 0</string>
    <string name="invalid_phone">Phone number is invalid</string>

    <!--Generic Buttons-->
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>
