<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@android:color/white"
        android:padding="@dimen/screen_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/park_me_logo"
                android:contentDescription="@string/app_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/index_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_car_instruction"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@id/app_logo"/>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/index_instruction"/>


        <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginTop="@dimen/text_label_margin"
                android:padding="12dp"
                android:background="@drawable/error_background"
                android:visibility="gone"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@id/index_instruction"/>


        <TextView
                android:id="@+id/number_plate_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_plate"
                android:layout_marginTop="@dimen/text_label_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_text"/>

        <EditText
                android:id="@+id/number_plate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:background="@drawable/edittext_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number_plate_lbl"/>

        <TextView
                android:id="@+id/manufacturer_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:layout_marginTop="@dimen/text_label_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number_plate"/>

        <EditText
                android:id="@+id/manufacturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:hint="e.g Ford"
                android:background="@drawable/edittext_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manufacturer_lbl"/>

        <TextView
                android:id="@+id/model_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:layout_marginTop="@dimen/text_label_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manufacturer"/>

        <EditText
                android:id="@+id/model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@drawable/edittext_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/model_lbl"/>

        <Button
                android:id="@+id/proceed_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/button_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/model"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>