<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:background="@android:color/white"
        android:padding="@dimen/screen_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/park_me_logo"
                android:contentDescription="@string/app_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/index_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/index_instruction"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@id/app_logo"/>

        <TextView
                android:id="@+id/driver_name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:layout_marginTop="@dimen/text_label_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/index_instruction"/>

        <EditText
                android:id="@+id/driver_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:background="@drawable/edittext_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/driver_name_lbl"/>

        <TextView
                android:id="@+id/driver_phone_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_phone"
                android:layout_marginTop="@dimen/text_label_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/driver_name"/>

        <RelativeLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/driver_phone_lbl">

            <TextView
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="+234"
                    android:background="@drawable/edittext_background"
                    android:textAppearance="?android:textAppearanceMedium"/>

            <EditText
                    android:id="@+id/driver_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center|end"
                    android:layout_toEndOf="@id/country_code"
                    android:inputType="phone"
                    android:background="@drawable/edittext_background"
                    android:lines="1"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

        </RelativeLayout>

        <Button
                android:id="@+id/next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/button_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>